# BuRR

./: .gitignore  CMakeLists.txt
bundled/DySECT/: cuckoo_base.hpp  cuckoo_simple.hpp
bundled/tlx/include/: integer_log2.hpp  logger.hpp  wrap_unprintable.hpp
bundled/tlx/src/: cmdline_parser.cpp  core.cpp  parse_si_iec_units.cpp
include/: BuRR.hpp  BuRR1bit.hpp  BuRR2bits.hpp  backsubst.hpp  build.hpp  config.hpp  constants.hpp  construction.hpp  hasher.hpp  interleaved.hpp  minimal_hasher.hpp  permute.hpp  query.hpp  ribbon.hpp  serialize.hpp  storage.hpp  thresh_compress.hpp
old/include/: backsubst.hpp  minimal_hasher.hpp  thresh_compress.hpp
old/src/: main.cpp
src/: BuRR.cpp  build.cpp  burr_config.cpp  config.cpp  constants.cpp  interleaved.cpp  sorter.cpp
targets/: main.cpp  ribbon.cpp
